2009-03-23  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/main.py:
	* pycvsanaly2/extensions/FileTypes.py:
	* pycvsanaly2/extensions/CommitsLOC.py:
	* pycvsanaly2/extensions/Metrics.py:

	Use our own git clone command in Metrics to take advantage of the
	--reference flag since we already have the repository cloned. It
	makes the clone command really fast. It required some changes in
	other extensions because we need to provide the local path instead of
	the remote uri. 
	
2009-03-23  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Add git support in Metrics extension.
	
2009-03-23  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Remove the tempdir used in Metrics when the extension is aborted.
	
2009-03-23  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/ExtensionsManager.py:

	Raise InvalidExtension only when a ExtensionUnknownError has been
	raised.
	
2009-03-23  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Fix incremental stuff in Metrics extension and update the contents
	of the table for the metrics that failed on previous executions.
	
2009-03-23  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/DBContentHandler.py:
	* pycvsanaly2/DBTempLog.py:
	* pycvsanaly2/utils.py:

	Add support to load/save DBContentHandler caches from/to a disk
	cache. Implement incremental approach in DBContentHandler.
	
2009-03-17  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/DBTempLog.py:

	Initialize _need_clear before creating the temp table.
	
2009-03-11  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/Command.py:
	* pycvsanaly2/extensions/Metrics.py:

	Update Command from misc and do not use run_sync() in Metrics
	since it's now deprecated. 
	
2009-03-11  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Use RepositoryHandler exceptions instead of Command exceptions